CybtansSDK/Tools/Cybtans.Proto/.antlr/Protobuf3Parser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from g:\Projects\Cybtans.Services\Cybtans.Service.CodeGen\Cybtans.Service.Proto\Protobuf3.g4 by ANTLR 4.7.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419


using Cybtans.Service.Proto.AST;

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]
[System.CLSCompliant(false)]
public partial class Protobuf3Parser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, Ident=37, IntLit=38, 
		FloatLit=39, BoolLit=40, StrLit=41, Quote=42, WS=43, COMMENT=44, LINE_COMMENT=45;
	public const int
		RULE_proto = 0, RULE_syntax = 1, RULE_importStatement = 2, RULE_packageStatement = 3, 
		RULE_option = 4, RULE_optionName = 5, RULE_optionBody = 6, RULE_optionBodyVariable = 7, 
		RULE_topLevelDef = 8, RULE_message = 9, RULE_enumDefinition = 10, RULE_enumField = 11, 
		RULE_service = 12, RULE_rpc = 13, RULE_reserved = 14, RULE_ranges = 15, 
		RULE_range = 16, RULE_fieldNames = 17, RULE_fullIdent = 18, RULE_emptyStatement = 19, 
		RULE_constant = 20, RULE_type = 21, RULE_field = 22, RULE_fieldOptions = 23, 
		RULE_fieldOption = 24, RULE_oneof = 25, RULE_oneofField = 26, RULE_mapField = 27, 
		RULE_messageName = 28, RULE_fieldName = 29, RULE_oneofName = 30, RULE_messageType = 31;
	public static readonly string[] ruleNames = {
		"proto", "syntax", "importStatement", "packageStatement", "option", "optionName", 
		"optionBody", "optionBodyVariable", "topLevelDef", "message", "enumDefinition", 
		"enumField", "service", "rpc", "reserved", "ranges", "range", "fieldNames", 
		"fullIdent", "emptyStatement", "constant", "type", "field", "fieldOptions", 
		"fieldOption", "oneof", "oneofField", "mapField", "messageName", "fieldName", 
		"oneofName", "messageType"
	};

	private static readonly string[] _LiteralNames = {
		null, "'syntax'", "'='", "'\"proto3\"'", "''proto3''", "';'", "'import'", 
		"'weak'", "'public'", "'package'", "'option'", "'('", "')'", "'.'", "'{'", 
		"'}'", "':'", "'message'", "'enum'", "'-'", "'['", "']'", "'service'", 
		"'rpc'", "'stream'", "'returns'", "'reserved'", "','", "'to'", "'+'", 
		"'true'", "'false'", "'repeated'", "'oneof'", "'map'", "'<'", "'>'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "Ident", "IntLit", "FloatLit", "BoolLit", "StrLit", "Quote", "WS", 
		"COMMENT", "LINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Protobuf3.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static Protobuf3Parser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}




		public Protobuf3Parser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public Protobuf3Parser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class ProtoContext : ParserRuleContext {
		public ProtoFile file = new ProtoFile();
		public ImportStatementContext _importStatement;
		public PackageStatementContext _packageStatement;
		public OptionContext _option;
		public TopLevelDefContext _topLevelDef;
		public SyntaxContext syntax() {
			return GetRuleContext<SyntaxContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(Protobuf3Parser.Eof, 0); }
		public ImportStatementContext[] importStatement() {
			return GetRuleContexts<ImportStatementContext>();
		}
		public ImportStatementContext importStatement(int i) {
			return GetRuleContext<ImportStatementContext>(i);
		}
		public PackageStatementContext[] packageStatement() {
			return GetRuleContexts<PackageStatementContext>();
		}
		public PackageStatementContext packageStatement(int i) {
			return GetRuleContext<PackageStatementContext>(i);
		}
		public OptionContext[] option() {
			return GetRuleContexts<OptionContext>();
		}
		public OptionContext option(int i) {
			return GetRuleContext<OptionContext>(i);
		}
		public TopLevelDefContext[] topLevelDef() {
			return GetRuleContexts<TopLevelDefContext>();
		}
		public TopLevelDefContext topLevelDef(int i) {
			return GetRuleContext<TopLevelDefContext>(i);
		}
		public EmptyStatementContext[] emptyStatement() {
			return GetRuleContexts<EmptyStatementContext>();
		}
		public EmptyStatementContext emptyStatement(int i) {
			return GetRuleContext<EmptyStatementContext>(i);
		}
		public ProtoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_proto; } }
	}

	[RuleVersion(0)]
	public ProtoContext proto() {
		ProtoContext _localctx = new ProtoContext(Context, State);
		EnterRule(_localctx, 0, RULE_proto);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 64; syntax();
			State = 80;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__8) | (1L << T__9) | (1L << T__16) | (1L << T__17) | (1L << T__21))) != 0)) {
				{
				State = 78;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case T__5:
					{
					State = 65; _localctx._importStatement = importStatement();
					_localctx.file.Imports.Add(_localctx._importStatement.node);
					}
					break;
				case T__8:
					{
					State = 68; _localctx._packageStatement = packageStatement();
					_localctx.file.Package=_localctx._packageStatement.node;
					}
					break;
				case T__9:
					{
					State = 71; _localctx._option = option();
					_localctx.file.Options.Add(_localctx._option.node);
					}
					break;
				case T__16:
				case T__17:
				case T__21:
					{
					State = 74; _localctx._topLevelDef = topLevelDef();
					_localctx.file.Declarations.Add(_localctx._topLevelDef.node);
					}
					break;
				case T__4:
					{
					State = 77; emptyStatement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 82;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 83; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SyntaxContext : ParserRuleContext {
		public SyntaxContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_syntax; } }
	}

	[RuleVersion(0)]
	public SyntaxContext syntax() {
		SyntaxContext _localctx = new SyntaxContext(Context, State);
		EnterRule(_localctx, 2, RULE_syntax);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85; Match(T__0);
			State = 86; Match(T__1);
			State = 87;
			_la = TokenStream.LA(1);
			if ( !(_la==T__2 || _la==T__3) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 88; Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImportStatementContext : ParserRuleContext {
		public ImportDeclaration node;
		public IToken w;
		public IToken p;
		public IToken v;
		public ITerminalNode StrLit() { return GetToken(Protobuf3Parser.StrLit, 0); }
		public ImportStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_importStatement; } }
	}

	[RuleVersion(0)]
	public ImportStatementContext importStatement() {
		ImportStatementContext _localctx = new ImportStatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_importStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90; Match(T__5);
			State = 93;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__6:
				{
				State = 91; _localctx.w = Match(T__6);
				}
				break;
			case T__7:
				{
				State = 92; _localctx.p = Match(T__7);
				}
				break;
			case StrLit:
				break;
			default:
				break;
			}
			State = 95; _localctx.v = Match(StrLit);
			State = 96; Match(T__4);
			_localctx.node =  new ImportDeclaration(_localctx.Start, _localctx.w != null?ImportType.Weak:ImportType.Public, (_localctx.v!=null?_localctx.v.Text:null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PackageStatementContext : ParserRuleContext {
		public PackageDeclaration node;
		public FullIdentContext id;
		public FullIdentContext fullIdent() {
			return GetRuleContext<FullIdentContext>(0);
		}
		public PackageStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_packageStatement; } }
	}

	[RuleVersion(0)]
	public PackageStatementContext packageStatement() {
		PackageStatementContext _localctx = new PackageStatementContext(Context, State);
		EnterRule(_localctx, 6, RULE_packageStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99; Match(T__8);
			State = 100; _localctx.id = fullIdent();
			State = 101; Match(T__4);
			 _localctx.node =  new PackageDeclaration((_localctx.id!=null?(_localctx.id.Start):null), _localctx.id.node);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OptionContext : ParserRuleContext {
		public OptionsExpression node;
		public ExpressionNode e;
		public OptionNameContext id;
		public ConstantContext _constant;
		public OptionBodyContext _optionBody;
		public OptionNameContext optionName() {
			return GetRuleContext<OptionNameContext>(0);
		}
		public ConstantContext constant() {
			return GetRuleContext<ConstantContext>(0);
		}
		public OptionBodyContext optionBody() {
			return GetRuleContext<OptionBodyContext>(0);
		}
		public OptionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_option; } }
	}

	[RuleVersion(0)]
	public OptionContext option() {
		OptionContext _localctx = new OptionContext(Context, State);
		EnterRule(_localctx, 8, RULE_option);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 104; Match(T__9);
			State = 105; _localctx.id = optionName();
			State = 106; Match(T__1);
			State = 113;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__18:
			case T__28:
			case T__29:
			case T__30:
			case IntLit:
			case FloatLit:
			case StrLit:
				{
				State = 107; _localctx._constant = constant();
				 _localctx.e = _localctx._constant.node;
				}
				break;
			case T__13:
				{
				State = 110; _localctx._optionBody = optionBody();
				_localctx.e =  _localctx._optionBody.node;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 115; Match(T__4);
			_localctx.node =  new OptionsExpression(_localctx.id.node, _localctx.e, _localctx.Start);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OptionNameContext : ParserRuleContext {
		public IdentifierExpression node;
		public IToken id;
		public FullIdentContext _fullIdent;
		public FullIdentContext fullIdent() {
			return GetRuleContext<FullIdentContext>(0);
		}
		public ITerminalNode[] Ident() { return GetTokens(Protobuf3Parser.Ident); }
		public ITerminalNode Ident(int i) {
			return GetToken(Protobuf3Parser.Ident, i);
		}
		public OptionNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_optionName; } }
	}

	[RuleVersion(0)]
	public OptionNameContext optionName() {
		OptionNameContext _localctx = new OptionNameContext(Context, State);
		EnterRule(_localctx, 10, RULE_optionName);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 125;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Ident:
				{
				State = 118; _localctx.id = Match(Ident);
				 _localctx.node =  new OptionIdentifierExpression((_localctx.id!=null?_localctx.id.Text:null), null, _localctx.Start); 
				}
				break;
			case T__10:
				{
				State = 120; Match(T__10);
				State = 121; _localctx._fullIdent = fullIdent();
				 
				              var n = new OptionIdentifierExpression(_localctx._fullIdent.node.Id, _localctx._fullIdent.node.Left, _localctx.Start );
				              n.IsExtension = true;
				              _localctx.node =  n;
				              
				State = 123; Match(T__11);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 132;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__12) {
				{
				{
				State = 127; Match(T__12);
				{
				State = 128; _localctx.id = Match(Ident);
				 _localctx.node =  new OptionIdentifierExpression((_localctx.id!=null?_localctx.id.Text:null), _localctx.node, _localctx.id); 
				}
				}
				}
				State = 134;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OptionBodyContext : ParserRuleContext {
		public InitializerExp node;
		public OptionBodyVariableContext e;
		public OptionBodyVariableContext[] optionBodyVariable() {
			return GetRuleContexts<OptionBodyVariableContext>();
		}
		public OptionBodyVariableContext optionBodyVariable(int i) {
			return GetRuleContext<OptionBodyVariableContext>(i);
		}
		public OptionBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_optionBody; } }
	}

	[RuleVersion(0)]
	public OptionBodyContext optionBody() {
		OptionBodyContext _localctx = new OptionBodyContext(Context, State);
		EnterRule(_localctx, 12, RULE_optionBody);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 135; Match(T__13);
			State = 141;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Ident) {
				{
				{
				State = 136; _localctx.e = optionBodyVariable();
				 
				            _localctx.node =  _localctx.node??new InitializerExp(_localctx.Start); 
				            _localctx.node.Expressions.Add(_localctx.e.node); 
				}
				}
				State = 143;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 144; Match(T__14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OptionBodyVariableContext : ParserRuleContext {
		public MemberInitializerExp node;
		public IToken id;
		public ConstantContext e;
		public ITerminalNode Ident() { return GetToken(Protobuf3Parser.Ident, 0); }
		public ConstantContext constant() {
			return GetRuleContext<ConstantContext>(0);
		}
		public OptionBodyVariableContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_optionBodyVariable; } }
	}

	[RuleVersion(0)]
	public OptionBodyVariableContext optionBodyVariable() {
		OptionBodyVariableContext _localctx = new OptionBodyVariableContext(Context, State);
		EnterRule(_localctx, 14, RULE_optionBodyVariable);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 146; _localctx.id = Match(Ident);
			State = 147; Match(T__15);
			State = 148; _localctx.e = constant();
			_localctx.node =  new MemberInitializerExp(_localctx.Start,(_localctx.id!=null?_localctx.id.Text:null), _localctx.e.node);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TopLevelDefContext : ParserRuleContext {
		public DeclarationNode node;
		public MessageContext _message;
		public EnumDefinitionContext _enumDefinition;
		public ServiceContext _service;
		public MessageContext message() {
			return GetRuleContext<MessageContext>(0);
		}
		public EnumDefinitionContext enumDefinition() {
			return GetRuleContext<EnumDefinitionContext>(0);
		}
		public ServiceContext service() {
			return GetRuleContext<ServiceContext>(0);
		}
		public TopLevelDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_topLevelDef; } }
	}

	[RuleVersion(0)]
	public TopLevelDefContext topLevelDef() {
		TopLevelDefContext _localctx = new TopLevelDefContext(Context, State);
		EnterRule(_localctx, 16, RULE_topLevelDef);
		try {
			State = 160;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__16:
				EnterOuterAlt(_localctx, 1);
				{
				State = 151; _localctx._message = message();
				_localctx.node =  _localctx._message.node;
				}
				break;
			case T__17:
				EnterOuterAlt(_localctx, 2);
				{
				State = 154; _localctx._enumDefinition = enumDefinition();
				_localctx.node =  _localctx._enumDefinition.node; 
				}
				break;
			case T__21:
				EnterOuterAlt(_localctx, 3);
				{
				State = 157; _localctx._service = service();
				_localctx.node =  _localctx._service.node;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MessageContext : ParserRuleContext {
		public MessageDeclaration node;
		public MessageNameContext _messageName;
		public EnumDefinitionContext e;
		public MessageContext m;
		public OptionContext _option;
		public MapFieldContext _mapField;
		public FieldContext _field;
		public MessageNameContext messageName() {
			return GetRuleContext<MessageNameContext>(0);
		}
		public OptionContext[] option() {
			return GetRuleContexts<OptionContext>();
		}
		public OptionContext option(int i) {
			return GetRuleContext<OptionContext>(i);
		}
		public MapFieldContext[] mapField() {
			return GetRuleContexts<MapFieldContext>();
		}
		public MapFieldContext mapField(int i) {
			return GetRuleContext<MapFieldContext>(i);
		}
		public ReservedContext[] reserved() {
			return GetRuleContexts<ReservedContext>();
		}
		public ReservedContext reserved(int i) {
			return GetRuleContext<ReservedContext>(i);
		}
		public FieldContext[] field() {
			return GetRuleContexts<FieldContext>();
		}
		public FieldContext field(int i) {
			return GetRuleContext<FieldContext>(i);
		}
		public EmptyStatementContext[] emptyStatement() {
			return GetRuleContexts<EmptyStatementContext>();
		}
		public EmptyStatementContext emptyStatement(int i) {
			return GetRuleContext<EmptyStatementContext>(i);
		}
		public EnumDefinitionContext[] enumDefinition() {
			return GetRuleContexts<EnumDefinitionContext>();
		}
		public EnumDefinitionContext enumDefinition(int i) {
			return GetRuleContext<EnumDefinitionContext>(i);
		}
		public MessageContext[] message() {
			return GetRuleContexts<MessageContext>();
		}
		public MessageContext message(int i) {
			return GetRuleContext<MessageContext>(i);
		}
		public MessageContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_message; } }
	}
